# VirtualSensor

./: .env.example  .gitignore  Cargo.toml  Config.toml  Makefile  NetworkStat.rs  Process.rs  README.md  SampleConfig.toml  build.rs  common.rs  config.rs  config.toml  docker-compose.yml  exampleConfig.toml  filters.json  main.rs  netlink.rs  network_stat.rs  process.rs  readme.md  sampleConfig.json  sampleConfig.toml  taskstat.rs
ThirdPartySourceOriginal/config-file/: .cargo-checksum.json  Cargo.toml
ThirdPartySourceOriginal/pcap/: .cargo-checksum.json  Cargo.toml
ThirdPartySourceOriginal/pcap/examples/: streamlisten.rs
ThirdPartySourceOriginal/widestring/: .cargo-checksum.json  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  appveyor_rust_install.ps1
ThirdPartySourceOriginal/widestring/src/: lib.rs  widecstring.rs  widestring.rs
configBackend/: index.ts  logger.ts  mockPublish.ts  sensorGateway.sqlite
configBackend/repositories/: sensorInfoRepo.ts
configBackend/repositories/db/: sensorGateway.sqlite
configBackend/repositories/sql/: sensors.sql
configBackend/services/: cacheService.ts  healthcheckService.ts
configBackend/type/: virtualSensor.d.ts
configUI/src/: App.css  App.tsx  common.ts  configView.tsx  dictionary.ts  homePage.tsx  index.tsx  optionMenu.tsx  table.tsx
configUI/src/redux/: sensorSlice.ts  store.ts
configUI/src/types/: virtualSensor.d.tsx
netlink/: generic.rs
src/: common.rs  config.rs  main.rs  netlink.rs  network_stat.rs  process.rs  setting.rs  socket.rs  taskstat.rs
src/config/: filter.rs
src/setting/: filter.rs
(+3 files in other folders)
