[package]
name = "virtual_sensor"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[profile.release]
overflow-checks = true

[[bin]]
name = "virtual_sensor"
path = "src/main.rs"

[dependencies]
libc = "*"
netlink-sys = "*"
lazy_static = "*"
pcap = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
config-file = "*"
