[package]
name = "virtual_sensor"
version = "0.1.0"
edition = "2018"

[profile.release]
overflow-checks = true

[[bin]]
name = "virtual_sensor"
path = "src/main.rs"

[dependencies]
libc = "0.2.137"
netlink-sys = "0.7.0"
lazy_static = "1.4.0"
pcap = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
config-file = "0.2.1"
tokio = { version = "1", features = ["full"] }
kafka = "0.9.0"
openssl = { version = "0.10.35", features = ["vendored"] }
toml = "0.5.9"
redis = "0.22.1"
dotenv = "0.15.0"
